--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
 
 [testenv]
 commands =
-    coverage run mox_test.py
+    python setup.py test
     coverage xml
     coverage report -m
 setenv =
