--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,9 @@
+recursive-include mox/*.py
 include COPYING
-include mox_test.py
-include mox_test_helper.py
-include stubout_test.py
-include stubout_testee.py
+include *.md
+include *.rst
+include *.cfg
+include *.sql
+include *.yml
+include *.xml
+include requirements.txt
