--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/pymox
     docker:
-      - image: circleci/python
+      - image: themattrix/tox
     environment:
       CODECOV_TOKEN: 07a918bb-31b1-49fc-b4d9-55db4858a3fd
       CACHE_KEY: "pyenv local 2.7.13 3.3.6 3.4.6 3.5.3 3.6.2"
@@ -23,14 +23,7 @@ jobs:
             sudo pip install codecov==1.6.3 six
             sudo pip install tox tox-pyenv flake8
       - run:
-          command: |
-            curl -L https://raw.githubusercontent.com/pyenv/pyenv-installer/master/bin/pyenv-installer | bash
-            echo 'export PATH="/home/circleci/.pyenv/bin:$PATH"' >>~/.bash_profile
-            echo 'eval "$(pyenv init -)"' >>~/.bash_profile
-            echo 'eval "$(pyenv virtualenv-init -)"' >>~/.bash_profile
             source ~/.bash_profile
-            parallel -j 5 pyenv install ::: 2.7.13 3.3.6 3.4.6 3.5.3 3.6.2
-            pyenv local 2.7.13 3.3.6 3.4.6 3.5.3 3.6.2
       - save_cache:
           paths:
             - ./.pyenv
