--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           - v1-dependencies-
       - run:
           command: |
+            apt-get update -qq
             apt-get install -yq make build-essential libssl-dev zlib1g-dev libbz2-dev
             apt-get install -yq libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev
             apt-get install -yq xz-utils tk-dev libffi-dev
