--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             apt-get update -qq
             apt-get install -yq make build-essential libssl-dev zlib1g-dev libbz2-dev
             apt-get install -yq libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev
-            apt-get install -yq xz-utils tk-dev libffi-dev
+            apt-get install -yq xz-utils tk-dev libffi-dev git
       - run:
           command: |
             pip install codecov==1.6.3 six
