--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run:
           command: |
             pyenv local 2.7.13 3.3.6 3.4.5 3.5.2 3.6.0
+            pip install codecov
             tox
       - store_artifacts:
           path: test-reports
