--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,10 @@
 test=pytest
 
 [tool:pytest]
-addopts = --cov-config .coveragerc --cov=mox test/mox_test.py
+addopts =
+    -v
+    --cov-config .coveragerc
+    --cov=mox
+    --cov-branch
+    --cov-report term-missing
+    test/mox_test.py
